[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/splash_screen.gd" type="Script" id=1]
[ext_resource path="res://images/SplashScreen_v2.png" type="Texture" id=2]

[sub_resource type="Environment" id=1]
background_mode = 1

[sub_resource type="Animation" id=2]
resource_name = "SplashScreen"
length = 5.0
tracks/0/type = "bezier"
tracks/0/path = NodePath("MeshInstance:material/0:albedo_color:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 3.9, 4.7 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("MeshInstance:material/0:albedo_color:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 3.9, 4.7 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("MeshInstance:material/0:albedo_color:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 3.9, 4.7 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("MeshInstance:material/0:albedo_color:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 3.9, 4.7 )
}

[sub_resource type="QuadMesh" id=3]
size = Vector2( 0.9, 0.8 )

[sub_resource type="SpatialMaterial" id=4]
flags_unshaded = true
albedo_texture = ExtResource( 2 )

[node name="SplashScreen" type="Spatial"]
script = ExtResource( 1 )

[node name="OQ_ARVROrigin" type="ARVROrigin" parent="."]

[node name="OQ_ARVRCamera" type="ARVRCamera" parent="OQ_ARVROrigin"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.8, 0 )
environment = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/SplashScreen = SubResource( 2 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1.28, 0, 0, 0, 1, 0, 0, 0, 0, 0, 1.77706, -1.06045 )
mesh = SubResource( 3 )
material/0 = SubResource( 4 )
